[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice_agent"
version = "0.1.0"
authors = [
  { name="AI Assistant", email="assistant@example.com" },
]
description = "A multi-lingual chatbot for invoice status queries"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
